# Image2Geometry

./: .gitignore  CITATION.md  CMakeLists.txt  LICENSE.rtf  README.md  installer.nsi
CMakeModules/: Find3DS.cmake  FindArmadillo.cmake  FindEigen3.cmake  FindFLANN_.cmake  FindFlann.cmake  FindLIB3DS.cmake  FindOpenCV_alternative.cmake  FindTIFF.cmake  Findosg.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
CMakeModules/CGAL/: CGALConfig.cmake
CMakeModules/VTK/: VTKBuildSettings.cmake  VTKConfig.cmake  VTKConfigQt.cmake  VTKTargets-debug.cmake  VTKTargets.cmake  pkgIndex.tcl  vtkChartsKit.cmake  vtkCommonKit.cmake  vtkGeovisKit.cmake  vtkGraphicsKit.cmake  vtkHybridKit.cmake  vtkIOKit.cmake  vtkInfovisKit.cmake  vtkParallelKit.cmake  vtkRenderingKit.cmake  vtkViewsKit.cmake  vtkVolumeRenderingKit.cmake  vtkWidgetsKit.cmake
CMakeModules/VTK/tcl/vtk/: vtk.tcl
CMakeModules/VTK/tcl/vtkbase/: vtkbase.tcl
CMakeModules/VTK/tcl/vtkcommon/: vtkcommon.tcl
CMakeModules/VTK/tcl/vtkfiltering/: vtkfiltering.tcl
CMakeModules/VTK/tcl/vtkgeovis/: vtkgeovis.tcl
CMakeModules/VTK/tcl/vtkgraphics/: vtkgraphics.tcl
CMakeModules/VTK/tcl/vtkhybrid/: vtkhybrid.tcl
CMakeModules/VTK/tcl/vtkimaging/: vtkimaging.tcl
CMakeModules/VTK/tcl/vtkinfovis/: vtkinfovis.tcl
CMakeModules/VTK/tcl/vtkinteraction/: vtkinteraction.tcl
CMakeModules/VTK/tcl/vtkio/: vtkio.tcl
CMakeModules/VTK/tcl/vtkparallel/: vtkparallel.tcl
CMakeModules/VTK/tcl/vtkrendering/: vtkrendering.tcl
CMakeModules/VTK/tcl/vtktesting/: grab.tcl  vtktesting.tcl
CMakeModules/VTK/tcl/vtkviews/: vtkviews.tcl
CMakeModules/VTK/tcl/vtkvolumerendering/: vtkvolumerendering.tcl
CMakeModules/VTK/tcl/vtkwidgets/: vtkwidgets.tcl
src/: AccurateMatcher.cpp  AccurateMatcher.h  BoundRenderScene.cpp  BoundRenderScene.h  CMakeLists.txt  Circle.cpp  Circle.h  CirclePairReader.cpp  CirclePairReader.h  ConstrainedMatcher.cpp  ConstrainedMatcher.h  DATtoOCV.cpp  DATtoOCV.h  DCSiftDescriptorExtractor.cpp  DCSiftDescriptorExtractor.h  DiscriminativeColorDescriptor.cpp  DiscriminativeColorDescriptor.h  GeometryIntersector.cpp  GeometryIntersector.h  HueDescriptor.cpp  HueDescriptor.h  ImageFileDescriptor.cpp  ImageFileDescriptor.h  ImagingPrimitives.cpp  ImagingPrimitives.h  OCVtoDAT.cpp  OCVtoDAT.h  OneWayRobustMatcher.cpp  OneWayRobustMatcher.h  OpenCVOSGGlue.cpp  OpenCVOSGGlue.h  ReaderEXIF.cpp  ReaderEXIF.h  ReaderPT2.cpp  ReaderPT2.h  ReaderPTS.cpp  ReaderPTS.h  RobustMatcher.cpp  RobustMatcher.h  Rotations.cpp  (+25 more)
w2c/: DD11_w2c_fast.txt  DD25_w2c_fast.txt  DD50_w2c_fast.txt
